🆕 feat: MediaResource file delete separately

--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/de-DE.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/de-DE.json
@@ -472,5 +472,6 @@
   "Returning again will exit the application": "Nochmaliges Zurückkehren wird die Anwendung beenden",
   "Something went wrong": "Etwas ist schief gelaufen",
   "This could be a browser cache issue. Refresh and try again, or manually hard reload ({0} for Windows, {1} for macOS).": "Dies könnte ein Browser-Cache-Problem sein. Aktualisieren Sie und versuchen Sie es erneut, oder laden Sie manuell neu ({0} für Windows, {1} für macOS).",
-  "Force refresh": "Erzwingtes Neuladen"
+  "Force refresh": "Erzwingtes Neuladen",
+  "This file is using": "Diese Datei wird verwendet"
 }
