--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
@@ -472,5 +472,6 @@
   "Returning again will exit the application": "Returning again will exit the application",
   "Something went wrong": "Something went wrong",
   "This could be a browser cache issue. Refresh and try again, or manually hard reload ({0} for Windows, {1} for macOS).": "This could be a browser cache issue. Refresh and try again, or manually hard reload ({0} for Windows, {1} for macOS).",
-  "Force refresh": "Force refresh"
+  "Force refresh": "Force refresh",
+  "This file is using": "This file is using"
 }
