--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/es-ES.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/es-ES.json
@@ -472,5 +472,6 @@
   "Returning again will exit the application": "Volver de nuevo saldrá de la aplicación",
   "Something went wrong": "Algo salió mal",
   "This could be a browser cache issue. Refresh and try again, or manually hard reload ({0} for Windows, {1} for macOS).": "Podría ser un problema de caché del navegador. Actualiza e inténtalo de nuevo, o recarga manualmente ({0} para Windows, {1} para macOS).",
-  "Force refresh": "Forzar actualización"
+  "Force refresh": "Forzar actualización",
+  "This file is using": "Este archivo está siendo utilizado"
 }
