--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/ru-RU.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/ru-RU.json
@@ -472,5 +472,6 @@
   "Returning again will exit the application": "Еще одно возвращение закроет приложение",
   "Something went wrong": "Что-то пошло не так",
   "This could be a browser cache issue. Refresh and try again, or manually hard reload ({0} for Windows, {1} for macOS).": "Это может быть проблемой кеша браузера. Обновите и попробуйте снова или перезагрузите вручную ({0} для Windows, {1} для macOS).",
-  "Force refresh": "Принудительное обновление"
+  "Force refresh": "Принудительное обновление",
+  "This file is using": "Этот файл используется"
 }
