--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/es-ES.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/es-ES.json
@@ -473,5 +473,11 @@
   "Something went wrong": "Algo salió mal",
   "This could be a browser cache issue. Refresh and try again, or manually hard reload ({0} for Windows, {1} for macOS).": "Podría ser un problema de caché del navegador. Actualiza e inténtalo de nuevo, o recarga manualmente ({0} para Windows, {1} para macOS).",
   "Force refresh": "Forzar actualización",
-  "This file is using": "Este archivo está siendo utilizado"
+  "This file is using": "Este archivo está siendo utilizado",
+  "Authentication": "Autenticación",
+  "App lock": "Bloqueo de aplicación",
+  "Number password": "Contraseña numérica",
+  "Fingerprint identification": "Identificación por huella digital",
+  "Lock time": "Tiempo de bloqueo",
+  "Lock when leaving the application": "Bloquear al salir de la aplicación"
 }
