--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/ja-JP.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/ja-JP.json
@@ -473,5 +473,11 @@
   "Something went wrong": "問題が発生しました",
   "This could be a browser cache issue. Refresh and try again, or manually hard reload ({0} for Windows, {1} for macOS).": "これはブラウザのキャッシュの問題である可能性があります。更新して再試行するか、手動で強制的に再読み込みしてください（Windowsの場合は{0}、macOSの場合は{1}）。",
   "Force refresh": "強制更新",
-  "This file is using": "このファイルは使用されています"
+  "This file is using": "このファイルは使用されています",
+  "Authentication": "認証",
+  "App lock": "アプリロック",
+  "Number password": "数字パスワード",
+  "Fingerprint identification": "指紋認証",
+  "Lock time": "ロック時間",
+  "Lock when leaving the application": "アプリ終了時にロック"
 }
