--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/pt-BR.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/pt-BR.json
@@ -473,5 +473,11 @@
   "Something went wrong": "Algo deu errado",
   "This could be a browser cache issue. Refresh and try again, or manually hard reload ({0} for Windows, {1} for macOS).": "Pode ser um problema de cache do navegador. Atualize e tente novamente ou recarregue manualmente ({0} para Windows, {1} para macOS).",
   "Force refresh": "Atualização forçada",
-  "This file is using": "Este arquivo está sendo usado"
+  "This file is using": "Este arquivo está sendo usado",
+  "Authentication": "Autenticação",
+  "App lock": "Bloqueio de aplicativo",
+  "Number password": "Senha numérica",
+  "Fingerprint identification": "Identificação por impressão digital",
+  "Lock time": "Tempo de bloqueio",
+  "Lock when leaving the application": "Bloquear ao sair do aplicativo"
 }
