--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/vi-VN.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/vi-VN.json
@@ -473,5 +473,11 @@
   "Something went wrong": "Đã xảy ra lỗi",
   "This could be a browser cache issue. Refresh and try again, or manually hard reload ({0} for Windows, {1} for macOS).": "Có thể do bộ nhớ đệm trình duyệt. Làm mới và thử lại, hoặc tải lại thủ công ({0} cho Windows, {1} cho macOS).",
   "Force refresh": "Tải lại cưỡng chế",
-  "This file is using": "Tập tin này đang được sử dụng"
+  "This file is using": "Tập tin này đang được sử dụng",
+  "Authentication": "Xác thực",
+  "App lock": "Khóa ứng dụng",
+  "Number password": "Mật khẩu số",
+  "Fingerprint identification": "Nhận dạng vân tay",
+  "Lock time": "Thời gian khóa",
+  "Lock when leaving the application": "Khóa khi rời khỏi ứng dụng"
 }
