--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-TW.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-TW.json
@@ -473,5 +473,11 @@
   "Something went wrong": "出了點意外",
   "This could be a browser cache issue. Refresh and try again, or manually hard reload ({0} for Windows, {1} for macOS).": "可能是瀏覽器快取的問題。重新整理並重試，或手動強制重新整理 （{0} 對於Windows， {1} 對於macOS）。",
   "Force refresh": "強制重新整理",
-  "This file is using": "這個檔案正在被使用"
+  "This file is using": "這個檔案正在被使用",
+  "Authentication": "身份驗證",
+  "App lock": "應用鎖",
+  "Number password": "數字密碼",
+  "Fingerprint identification": "指紋識別",
+  "Lock time": "鎖定時間",
+  "Lock when leaving the application": "離開應用時鎖定"
 }
