--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/ko-KR.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/ko-KR.json
@@ -479,5 +479,10 @@
   "Number password": "숫자 비밀번호",
   "Fingerprint identification": "지문 인식",
   "Lock time": "잠금 시간",
-  "Lock when leaving the application": "앱 종료 시 잠금"
+  "Lock when leaving the application": "앱 종료 시 잠금",
+  "Other unlocking methods": "기타 잠금 해제 방법",
+  "Pattern password": "패턴 비밀번호",
+  "Please draw a pattern": "패턴을 그려주세요",
+  "Please draw the pattern again": "패턴을 다시 그려주세요",
+  "System fingerprint unlocking has been turned off, please use another unlocking method": "시스템 지문 잠금 해제가 비활성화되었습니다. 다른 잠금 해제 방법을 사용하세요"
 }
