--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/es-ES.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/es-ES.json
@@ -479,5 +479,10 @@
   "Number password": "Contraseña numérica",
   "Fingerprint identification": "Identificación por huella digital",
   "Lock time": "Tiempo de bloqueo",
-  "Lock when leaving the application": "Bloquear al salir de la aplicación"
+  "Lock when leaving the application": "Bloquear al salir de la aplicación",
+  "Other unlocking methods": "Otros métodos de desbloqueo",
+  "Pattern password": "Patrón de contraseña",
+  "Please draw a pattern": "Por favor, dibuja un patrón",
+  "Please draw the pattern again": "Por favor, dibuja el patrón nuevamente",
+  "System fingerprint unlocking has been turned off, please use another unlocking method": "El desbloqueo por huella digital del sistema se ha desactivado, por favor usa otro método de desbloqueo"
 }
