--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/pt-BR.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/pt-BR.json
@@ -479,5 +479,10 @@
   "Number password": "Senha numérica",
   "Fingerprint identification": "Identificação por impressão digital",
   "Lock time": "Tempo de bloqueio",
-  "Lock when leaving the application": "Bloquear ao sair do aplicativo"
+  "Lock when leaving the application": "Bloquear ao sair do aplicativo",
+  "Other unlocking methods": "Outros métodos de desbloqueio",
+  "Pattern password": "Senha de padrão",
+  "Please draw a pattern": "Por favor, desenhe um padrão",
+  "Please draw the pattern again": "Por favor, desenhe o padrão novamente",
+  "System fingerprint unlocking has been turned off, please use another unlocking method": "O desbloqueio por impressão digital do sistema foi desativado, por favor use outro método de desbloqueio"
 }
