--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/vi-VN.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/vi-VN.json
@@ -479,5 +479,10 @@
   "Number password": "Mật khẩu số",
   "Fingerprint identification": "Nhận dạng vân tay",
   "Lock time": "Thời gian khóa",
-  "Lock when leaving the application": "Khóa khi rời khỏi ứng dụng"
+  "Lock when leaving the application": "Khóa khi rời khỏi ứng dụng",
+  "Other unlocking methods": "Các phương thức mở khóa khác",
+  "Pattern password": "Mật khẩu hình mẫu",
+  "Please draw a pattern": "Vui lòng vẽ hình mẫu",
+  "Please draw the pattern again": "Vui lòng vẽ lại hình mẫu",
+  "System fingerprint unlocking has been turned off, please use another unlocking method": "Tính năng mở khóa bằng vân tay hệ thống đã bị tắt, vui lòng sử dụng phương thức mở khóa khác"
 }
