--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/fr-FR.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/fr-FR.json
@@ -484,5 +484,9 @@
   "Pattern password": "Mot de passe schéma",
   "Please draw a pattern": "Veuillez dessiner un schéma",
   "Please draw the pattern again": "Veuillez dessiner à nouveau le schéma",
-  "System fingerprint unlocking has been turned off, please use another unlocking method": "Le déverrouillage par empreinte digitale du système a été désactivé, veuillez utiliser une autre méthode de déverrouillage"
+  "System fingerprint unlocking has been turned off, please use another unlocking method": "Le déverrouillage par empreinte digitale du système a été désactivé, veuillez utiliser une autre méthode de déverrouillage",
+  "Target does not exist": "La cible n'existe pas",
+  "Connection exception": "Exception de connexion",
+  "Generating": "Génération en cours",
+  "Importing": "Importation en cours"
 }
