--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/ja-JP.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/ja-JP.json
@@ -484,5 +484,9 @@
   "Pattern password": "パターンパスワード",
   "Please draw a pattern": "パターンを描いてください",
   "Please draw the pattern again": "もう一度パターンを描いてください",
-  "System fingerprint unlocking has been turned off, please use another unlocking method": "システムの指紋認証が無効になっています。他のロック解除方法を使用してください"
+  "System fingerprint unlocking has been turned off, please use another unlocking method": "システムの指紋認証が無効になっています。他のロック解除方法を使用してください",
+  "Target does not exist": "ターゲットが存在しません",
+  "Connection exception": "接続例外",
+  "Generating": "生成中",
+  "Importing": "インポート中"
 }
