--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
@@ -484,5 +484,9 @@
   "Pattern password": "图案密码",
   "Please draw a pattern": "请绘制图案",
   "Please draw the pattern again": "请再次绘制图案",
-  "System fingerprint unlocking has been turned off, please use another unlocking method": "系统指纹解锁已关闭，请使用其他解锁方式"
+  "System fingerprint unlocking has been turned off, please use another unlocking method": "系统指纹解锁已关闭，请使用其他解锁方式",
+  "Target does not exist": "目标不存在",
+  "Connection exception": "连接异常",
+  "Generating": "正在生成",
+  "Importing": "正在导入"
 }
