--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-TW.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-TW.json
@@ -484,5 +484,9 @@
   "Pattern password": "圖案密碼",
   "Please draw a pattern": "請繪製圖案",
   "Please draw the pattern again": "請再次繪製圖案",
-  "System fingerprint unlocking has been turned off, please use another unlocking method": "系統指紋解鎖已關閉，請使用其他解鎖方式"
+  "System fingerprint unlocking has been turned off, please use another unlocking method": "系統指紋解鎖已關閉，請使用其他解鎖方式",
+  "Target does not exist": "目標不存在",
+  "Connection exception": "連接異常",
+  "Generating": "正在生成",
+  "Importing": "正在導入"
 }
