--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/ko-KR.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/ko-KR.json
@@ -491,5 +491,7 @@
   "Importing": "가져오는 중",
   "Filter conditions": "필터 조건",
   "All comply": "모두 충족",
-  "Any one": "아무거나"
+  "Any one": "아무거나",
+  "Keep the original file name": "원본 파일 이름 유지",
+  "When adding files, use the original file name. The same file will no longer be kept in one copy.": "파일을 추가할 때 원본 파일 이름을 사용합니다. 동일한 파일은 더 이상 한 개의 복사본으로 보관되지 않습니다."
 }
