--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/pt-BR.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/pt-BR.json
@@ -491,5 +491,7 @@
   "Importing": "Importando",
   "Filter conditions": "Condições de filtro",
   "All comply": "Todos atendem",
-  "Any one": "Qualquer um"
+  "Any one": "Qualquer um",
+  "Keep the original file name": "Manter o nome do arquivo original",
+  "When adding files, use the original file name. The same file will no longer be kept in one copy.": "Ao adicionar arquivos, use o nome do arquivo original. O mesmo arquivo não será mais mantido em uma única cópia."
 }
