--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
@@ -491,5 +491,7 @@
   "Importing": "正在导入",
   "Filter conditions": "过滤条件",
   "All comply": "全部符合",
-  "Any one": "任意一个"
+  "Any one": "任意一个",
+  "Keep the original file name": "保留原始文件名",
+  "When adding files, use the original file name. The same file will no longer be kept in one copy.": "添加文件时，使用原始文件名。相同文件将不再只保留一份。"
 }
