--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
@@ -493,5 +493,5 @@
   "All comply": "All comply",
   "Any one": "Any one",
   "Keep the original file name": "Keep the original file name",
-  "When adding files, use the original file name. The same file will no longer be kept in one copy.": "When adding files, use the original file name. The same file will no longer be kept in one copy."
+  "When adding files, use the original file name. The file of same Sha256 will no longer be saved as only one copy.": "When adding files, use the original file name. The file of same Sha256 will no longer be saved as only one copy."
 }
