--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/es-ES.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/es-ES.json
@@ -493,5 +493,5 @@
   "All comply": "Cumplen todas",
   "Any one": "Cualquiera",
   "Keep the original file name": "Mantener el nombre de archivo original",
-  "When adding files, use the original file name. The same file will no longer be kept in one copy.": "Al agregar archivos, utilice el nombre de archivo original. El mismo archivo ya no se guardará en una sola copia."
+  "When adding files, use the original file name. The file of same Sha256 will no longer be saved as only one copy.": "Al agregar archivos, utilice el nombre de archivo original. Los archivos con el mismo Sha256 ya no se guardarán como una sola copia."
 }
