--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/vi-VN.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/vi-VN.json
@@ -493,5 +493,5 @@
   "All comply": "Tất cả tuân thủ",
   "Any one": "Bất kỳ",
   "Keep the original file name": "Giữ tên tệp gốc",
-  "When adding files, use the original file name. The same file will no longer be kept in one copy.": "Khi thêm tệp, hãy sử dụng tên tệp gốc. Tệp giống nhau sẽ không còn được giữ lại dưới dạng một bản sao nữa."
+  "When adding files, use the original file name. The file of same Sha256 will no longer be saved as only one copy.": "Khi thêm tệp, hãy sử dụng tên tệp gốc. Các tệp có Sha256 giống nhau sẽ không còn được lưu trữ chỉ dưới dạng một bản sao."
 }
